--- a/style.css
+++ b/style.css
@@ -396,3 +396,209 @@ label{
     -webkit-box-shadow: 5px 13px 49px -10px rgba(0,0,0,0.75);
     -moz-box-shadow: 5px 13px 49px -10px rgba(0,0,0,0.75);
 }
+
+.newSeason{
+    display: flex;
+
+}
+.nsItem{
+    float: 1;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.nsImg{
+    width: 100%;
+    height: 500px;
+}
+.nsTitlesm{
+    margin: 10px;
+}
+
+.nsTitle{
+    font-size: 40px;
+    margin: 15px 0px;
+}
+.nsButton{
+    padding: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 15px 0px;
+}
+
+footer{
+    display: flex;
+
+}
+
+.footerLeft{
+    flex: 2;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+}
+.fMenuTitle{
+    font-size: 16px;
+}
+.fList{
+    padding: 0;
+    list-style: none;
+
+}
+
+.fListItem{
+    margin-bottom: 10px;
+    color:gray;
+    cursor: pointer;
+
+}
+.footerRight{
+    flex: 1;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.fButton{
+    padding: 2px;
+    background-color: black;
+    color: white;
+}
+
+
+.fIcons{
+    display: flex;
+    margin-top: -10;
+}
+
+.fIcon{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.copyright{
+    font-weight: 300;
+    font-size: 14px;
+}
+
+@media  screen and (max-width:480px) {
+    nav{
+        padding: 20px;
+    }
+    .search{
+        display: none;
+    }
+
+    .navBottom{
+        flex-wrap: wrap;
+    }
+    .menuItem{
+        margin: 20px;
+        font-weight: 700;
+        font-style: 20px;
+
+    }
+
+    .slider{
+        clip-path: none;
+        
+    }
+
+    .sliderImg{
+        width: 90%;
+    }
+    .sliderBg{
+        width: 100%;
+        height: 100%;
+    }
+    .sliderTitle{
+        display: none;
+    }
+
+    .sliderPrice{
+        top: unset;
+        bottom: 0;
+        left: 0;
+        background-color: lightgrey;
+    }
+
+    .buyButton{
+        bottom: 0;
+        right: 0;
+        top: unset;
+    }
+
+    .features{
+        flex-direction: column;
+    }
+
+    .product{
+        clip-path: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .productImg{
+        width: 80%;
+    }
+    .productDetails{
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+        top: 0;
+    }
+
+    .productTitle{
+        font-style: 50px;
+        margin: 0;
+    }
+
+    .mainGallery{
+        display: none;
+    }
+
+    .newSeason{
+        flex-direction: column;
+        margin-top: 20rem;
+    }
+
+
+
+    .nsImg{
+        width: 100%;
+        height: 90%;
+    }
+
+    footer{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footerLeft{
+        padding: 20px;
+        width: 90%;
+
+    }
+    .footerRight{
+        padding: 20px;
+        width: 100%;
+        align-items: center;
+        background-color: whitesmoke;
+    }
+
+    .payment{
+        width: 90%;
+        padding: 20px;
+        /* box-shadow: none; */
+    }
+}
